--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+       <body>
+        <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+        <article>
+        <p>Amount &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="number"  id="principal"></p>
+        <p>Interest Rate &nbsp;&nbsp; <input type="range"  id="rate"
+        min="1" max="20" step="0.25" value="10.25" oninput="updateRate()" onchange="updateRate()">
+        <span id="rate_val">10.50%</span></p>
+        <p>No. of Years &nbsp;&nbsp;&nbsp;&nbsp;<select id="years">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                      </select></p>
+        <p><button onclick="compute()">Compute Interest</button></p>
+        <p><span id="result"></span></p>
+        </article>
+        <footer>
+                &#169;This Calculator belongs to 9Alchemist9.
+        </footer>
+        </div>
     </body>
 </html>
